--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,25 @@ header img {
     width: 90%;
 }
 
+.welcome-page p {
+  width: 500px;
+  margin-left: 50px;
+}
+
+#welcome-page-img {
+  padding: 2rem;
+}
+.welcome-page img {
+    float: right;
+    height: 500px;
+    width: 500px;
+}
+
+.welcome-page h1 {
+    font-size: 50px;
+    margin-left: 50px;
+}
+
 .card-tekst1 {
     grid-column-start: 1;
     grid-row-start: 1;
@@ -644,4 +663,3 @@ section input[type="search"] {
         width: 100%;
     }
 }
-
