--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h3 {
+h3, h5 {
     font-size: 1.6rem;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
