--- a/styles/style.css
+++ b/styles/style.css
@@ -502,7 +502,7 @@ section input[type="search"] {
 
 .gekketekst {
     text-align: center;
-    background: linear-gradient(to bottom, red 50%, blue 50%);
+    background: linear-gradient(to bottom, black 50%, blue 50%);
     color: transparent;
     background-clip: text;
 }
