--- a/styles/style.css
+++ b/styles/style.css
@@ -489,7 +489,7 @@ section input[type="search"] {
 .meer-fotos:hover {
     background: black;
     color: white;
-    transition-duration: 2s;
+    transition-duration: .5s;
 }
 
 .mugshot p {
