welkom tekst added

--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,10 @@ header img {
 }
 /*welkom stuk styling-----------------------------------------------------------------------------------------------------------------*/
 
+.welkomtekst {
+    text-align: center;
+    font-size: 2rem;
+}
 /*searrch box styling-----------------------------------------------------------------------------------------------------------------*/
 input::placeholder {
     color: rgba(229, 229, 229, 0.782);
