--- a/styles/style.css
+++ b/styles/style.css
@@ -95,10 +95,19 @@ header img {
     margin-bottom: -12%;
 }
 /*welkom stuk styling-----------------------------------------------------------------------------------------------------------------*/
+.text-blob {
+    position: relative;
+    grid-template-columns: 1fr;
+    grid-row-start: 1;
+}
 
 .welkomtekst {
     text-align: center;
+    color: black;
     font-size: 2rem;
+    grid-row-start: 1;
+    z-index: 10;
+
 }
 /*searrch box styling-----------------------------------------------------------------------------------------------------------------*/
 input::placeholder {
