--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,9 @@ header img {
     border-radius: 10px;
 }
 
+.waveheader {
+    height: 200px;
+}
 .wave3 {
     margin-bottom: -13%;
 }
@@ -107,8 +110,8 @@ header img {
     color: white;
     background-color:#22333B;
     font-size: 2rem;
-    height: 300px;
-    width:80%;
+    height: 500px;
+    width:60%;
     margin: 0;
     border-radius: 66% 34% 59% 41% / 30% 28% 72% 70%;
     transition-duration: 2s;
@@ -116,7 +119,7 @@ header img {
 
 .welkomtekst:hover {
     transition-duration: 2s;
-    rotate: 45deg;
+    rotate: 25deg;
     border-radius: 50% 50% 50% 50%;
 }
 
@@ -218,7 +221,6 @@ input::placeholder {
     justify-self: left;
     font-size: 1rem;
     padding: 10px;
-    padding-right: 50%;
     height: 65%;
 
 }
@@ -527,7 +529,7 @@ section input[type="search"] {
         width: 30%;
     }
     .welkomtekst { 
-        height: 600px;
+        height: 500px;
     }
 }
 
@@ -546,7 +548,7 @@ section input[type="search"] {
         width: 80vw;
     }
     .welkomtekst {
-        height: 300px;
+        height: 200px;
         padding: 20px;
     }
 
@@ -557,7 +559,9 @@ section input[type="search"] {
         margin: 0px;
         gap: 10px;
     }
-
+    .waveheader {
+    height: 50px;
+   } 
     .navigation {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -661,7 +665,7 @@ section input[type="search"] {
         align-self: center;
         font-size: .8rem;
         color: blue;
-        padding: 5px 10px;
+        padding: 5px 20%;
         border-bottom: 3px solid white;
         border-top: 3px solid white;
     }
