--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ header li {
 }
 
 header li:hover {
-    border-bottom: solid black 1px;
+    border-bottom: solid #22333B 1px;
 }
 
 header img {
@@ -133,7 +133,10 @@ input::placeholder {
   position: relative;
   display: inline-block;
 }
-
+.zoeken {
+    font-size: 1.2rem;
+    color: #22333B;
+}
 .search-box .search-icon {
   position: absolute;
   right: 7%;
@@ -328,11 +331,11 @@ article button {
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    color: black;
+    color: #22333B;
     background-color: white;
     text-decoration: none;
     list-style: none;
-    border: 1px solid black;
+    border: 1px solid #22333B;
     border-radius: 5px;
 }
 
@@ -400,7 +403,7 @@ footer {
 .location-image {
     position: relative;
     width: 100%;
-    background: black;
+    background: #22333B;
     object-fit: cover;
     aspect-ratio: 1/1;
     border-radius: 10px;
@@ -491,8 +494,8 @@ section input[type="search"] {
 .meer-fotos {
     font-size: 1rem;
     background: none;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid #22333B;
+    color: #22333B;
     border-radius: 50px;
     padding: 10px 20px;
     margin: 20px 0px;
@@ -500,7 +503,7 @@ section input[type="search"] {
 }
 
 .meer-fotos:hover {
-    background: black;
+    background: #22333B;
     color: white;
     transition-duration: .5s;
 }
@@ -512,7 +515,7 @@ section input[type="search"] {
 
 .gekketekst {
     text-align: center;
-    background: linear-gradient(to bottom, black 50%, blue 50%);
+    background: linear-gradient(to bottom, #22333B 50%, blue 50%);
     color: transparent;
     background-clip: text;
 }
