--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ header img {
 
 .welkomtekst:hover {
     transition-duration: 2s;
-    rotate: 25deg;
+    scale: 1.2;
     border-radius: 50% 50% 50% 50%;
 }
 
@@ -172,6 +172,7 @@ input::placeholder {
     overflow: hidden;
     border-radius: 10px;
     margin: 0.8rem auto;
+    transition-duration: 2s;
 }
 
 /*plaatjes op de juiste plek zetten in het vierkant*/
@@ -264,6 +265,7 @@ input::placeholder {
 
 /*als je eroverheen hovert wil ik een soort spotlight licht op de foto hebben*/
 .mugshot:hover::after {
+    
     content: "";
     position: absolute;
     inset: 0;
@@ -410,11 +412,13 @@ footer {
 .location-image {
     position: relative;
     width: 100%;
+    height: 100%;
     background: #22333B;
     object-fit: cover;
     aspect-ratio: 1/1;
     border-radius: 10px;
 }
+
 
 .wrapper-location {
     margin-bottom: 10%;
@@ -528,16 +532,19 @@ section input[type="search"] {
     background-clip: text;
 }
 /* responsiveness-----------------------------------------------------------------------------------------------------------------------------------*/
-@media only screen and (min-width: 1500px) {
+@media only screen and (min-width: 1300px) {
     .mugshot-image-container {
         max-width: 1500px;
         margin: 0 auto;
     }
+        .mugshot {
+        width: 30%;
+    }
 }
 
-@media only screen and (min-width: 790px) and (max-width: 1400px) {
+@media only screen and (min-width: 790px) and (max-width: 1300px) {
     .mugshot {
-        width: 30%;
+        width: 45%;
     }
     .welkomtekst { 
         height: 500px;
@@ -692,12 +699,6 @@ section input[type="search"] {
         padding: 0px 10px;
     }
 
-    .mugshot {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 1300px) {
     .mugshot {
         width: 100%;
     }
