--- a/styles/style.css
+++ b/styles/style.css
@@ -548,7 +548,7 @@ section input[type="search"] {
     }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 786px) {
+@media only screen and (max-width: 786px) {
 
     .image-footer,
     .footer-layout {
